website/versioned_docs/version-2.3.x/docs/introduction/getting-help.mdx
---
    title: Getting help
    position: 4
---

How to engage with the Pants community.

---

[block:api-header]
{
  "title": "Slack"
}
[/block]
The best place to get help is the Pants project's Slack workspace. You can join using [this link](https://join.slack.com/t/pantsbuild/shared_invite/zt-d0uh0mok-RLvVosDiX6JDpvStH~bFBA).

Feel free to optionally introduce yourself in `#welcome`. You can use `#general` to ask questions or to share feedback.
[block:api-header]
{
  "title": "Mailing list"
}
[/block]
You can join the `pants-devel@googlegroups.com` mailing list [here](https://groups.google.com/forum/#!forum/pants-devel). This is used mostly for announcements and for us to solicit user feedback.
[block:api-header]
{
  "title": "GitHub"
}
[/block]
Pants is an open-source software project, developed at [https://github.com/pantsbuild/pants](https://github.com/pantsbuild/pants).

If you discover a bug with Pants or have a feature request, feel free to [file an issue](https://github.com/pantsbuild/pants/issues). Please check first if a similar issue has already been filed; if it has, please comment so that we know to bump the issue in priority.
